--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -106,11 +106,15 @@ a  {
     
 }
 #Projetos {
+    
+    border-bottom: white 1px solid;
+}
+.card-area {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    border-bottom: white 1px solid;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .card {
     background-color: white;
@@ -120,7 +124,7 @@ a  {
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin: auto 15px 20px 15px; 
 }
 .card img {
     height: 200px; width: 300px;
@@ -128,4 +132,69 @@ a  {
 }
 .card p {
     text-align: center;
+}
+
+/* Contato Area */
+
+#Contato {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    border-bottom: white 1px solid;
+    margin: 25px auto 20px;
+}
+
+.contact-img  img {
+    width: 600px; height: auto;
+}
+
+.contact {
+    width: 600px; height: 400px;
+}
+.contact address h1 {
+    text-align: center;
+    font-size: 40px;
+}
+
+.email {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-left: 20px;
+    align-items: center;
+}
+.email img {
+    width: 50px; height: auto;
+    margin-right: 15px;
+}
+
+.email p {
+    font-size: 20px;
+}
+
+.social img {
+    width: 50px; height: auto;
+    margin-right: 15px;
+    margin-left: 20px;
+    margin-top: 50px;
+    margin-right: 15px;
+}
+
+/*Contact area fim*/
+
+/*Footer Area*/
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer p, a {
+    text-align: center;
+    font-size: 20px;
+    color: white;
 }
